--- a/index.html
+++ b/index.html
@@ -3,117 +3,287 @@
 
 <head>
     <!-- Required meta tags -->
- <!-- Required meta tags -->
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
     <link rel="stylesheet" href="css/index.css" />
     <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <!-- Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha384-mQ9vPWW95Napaa3aBF8nnWZQKfd8lXsYXnbGrvD73UEz1qUHvR1qqEFtY8x4ePE" crossorigin="anonymous">
     <link rel="stylesheet" href="css/css/all.min.css">
     <script src="page.js"></script>
 
-
-    <title>The Slip Bar and Eatery</title>
-</head>
-
 <body>
-    <nav class="navbar">
-        <div class="nav-logo">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
             <img src="img/slipiglogo.png" alt="The Slip Bar and Eatery" />
-        </div>
-        <div class="nav-links">
-            <a href="homepage.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="Merch.html">Merch</a>
-            <a href="jobs.html">Jobs</a>
-            <a href="contact.html">Contact</a>
-            <a href="events.html">Events</a>
-        </div>
-        <button class="mobile-nav-toggle" onclick="toggleMobileNav()">
-            <span>&#9776;</span>
-        </button>
-        <div class="mobile-nav-links">
-            <a href="homepage.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="Merch.html">Merch</a>
-            <a href="jobs.html">Jobs</a>
-            <a href="contact.html">Contact</a>
-            <a href="events.html">Events</a>
-        </div>
-    </nav>
-
-    <header>
-        <div class="locations-container">
-            <section id="locations">
-                <div class="location">
-                    <a href="redondo-beach.html">
-                        <div class="tile">
-                            <span>Redondo Beach</span>
-                        </div>
-                    </a>
-                </div>
-                <div class="location">
-                    <a href="lomita.html">
-                        <div class="tile">
-                            <span>Lomita</span>
-                        </div>
-                    </a>
-                </div>
-            </section>
-        </div>
-    </header>
-
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <!-- Carousel items go here -->
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="img/full (1).jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/full.jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/full2.jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/beer.jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/chips.jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/outlawburger.jpeg" class="d-block w-100" alt="food" />
-                </div>
-                <div class="carousel-item">
-                    <img src="img/sliptredondo-exterior-2.jpeg" class="d-block w-100" alt="food" />
-                </div>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="homepage.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="Merch.html">Merch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="jobs.html">Jobs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="events.html">Events</a>
+                    </li>
+                </ul>
             </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
+        </nav>
 
-    <footer class="footer">
-        <div class="social-links">
-            <a href="https://www.facebook.com/theslipbar/" target="_blank">
-                <i class="fab fa-facebook"></i>
+            <div class="nav-links">
+                <!-- Dropdown menu items go here -->
+            </div>
+
+
+        <!-- Rest of your HTML content -->
+
+        <script>
+            function toggleNav() {
+                const navLinks = document.querySelector('.nav-links');
+                navLinks.classList.toggle('show');
+            }
+        </script>
+
+
+        <header>
+            <div class = "carousel-container">
+                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                    <div class="locations-container">
+                        <section id="locations">
+                            <div class="location">
+                                <a href="redondo-beach.html">
+                                    <div class="location">
+                                        <span>Redondo Beach</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="location">
+                                <a href="lomita.html">
+                                    <div class="location">
+                                        <span>Lomita</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </section>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="img/full (1).jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/full.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/full2.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/beer.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/chips.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/outlawburger.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="img/sliptredondo-exterior-2.jpeg" class="d-block w-100" alt="food" />
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            
+            <!-- <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/full (1).jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="location">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="location">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/full.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/full2.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/beer.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/chips.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/outlawburger.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/sliptredondo-exterior-2.jpeg" class="d-block w-100" alt="food" />
+                        <div class="locations-container">
+                            <section id="locations">
+                                <div class="location">
+                                    <a href="redondo-beach.html">
+                                        <div class="tile">
+                                            <span>Redondo Beach</span>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="location">
+                                    <a href="lomita.html">
+                                        <div class="tile">
+                                            <span>Lomita</span>
+                                        </div>
+                                    </a>
+                                </div>
+                            </section>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div> -->
+        </header>
+
+
+        <footer class="footer">
+            <div class="social-links">
+                <a href="https://www.facebook.com/theslipbar/" target="_blank">
+                    <i class="fab fa-facebook"></i>
             </a>
             <a href="https://www.instagram.com/theslipbar/" target="_blank">
                 <i class="fab fa-instagram"></i>
