--- a/redondo-beach.html
+++ b/redondo-beach.html
@@ -64,7 +64,7 @@
         </script>
     <header>
       <div class="logo-container">
-        <img class="logo" src="img/thesliprbaddresslogo.png" alt="Restaurant Logo" />
+        <img class="logo" src="img/thesliprblogo.png" alt="Restaurant Logo" />
       </div>
     </header>
 
