--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Merch.html">Merch</a>
+                        <a class="nav-link" href="merch.html">Merch</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="jobs.html">Jobs</a>
